--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -24,7 +24,8 @@
     "support": "Supporto",
     "customersDiscountCodes": "Codici Sconto",
     "logview": "Logs",
-    "superadminemail": "Partner Email"
+    "superadminemail": "Partner Email",
+    "notifications": "Gestione Notifiche"
   },
   "customers": {
     "title": "Clienti",
@@ -546,7 +547,8 @@
     "confirmCancelTitle": "Annulla Invito",
     "confirmCancelMessage": "Sei sicuro di voler annullare questo invito? Questa azione non può essere annullata.",
     "confirmDeleteTitle": "Elimina Inviti",
-    "confirmDeleteMessage": "Sei sicuro di voler eliminare {{count}} invito/i? Questa azione non può essere annullata."
+    "confirmDeleteMessage": "Sei sicuro di voler eliminare {{count}} invito/i? Questa azione non può essere annullata.",
+    "selectStatus": "Seleziona lo stato"
   },
   "common": {
     "loading": "Caricamento...",
@@ -579,7 +581,8 @@
     "of": "di",
     "confirm": "Conferma",
     "accessDenied": "Accesso negato",
-    "select": "Seleziona"
+    "select": "Seleziona",
+    "page": "Per pagina"
   },
   "messages": {
     "signedInSuccessfully": "Accesso effettuato con successo",
@@ -1167,7 +1170,15 @@
     "startDate": "Data Inizio",
     "endDate": "Data Fine",
     "pricing": "Prezzi",
-    "serviceCost": "Costo Servizio"
+    "serviceCost": "Costo Servizio",
+    "deleteBooking": "Elimina Prenotazione",
+    "deleteBookingTitle": "Elimina Prenotazione",
+    "confirmDelete": "Elimina",
+    "confirmDeletePackageReservation": "Sei sicuro di voler eliminare questa prenotazione pacchetto? Questo ripristinerà un ingresso nel tuo pacchetto.",
+    "confirmDeleteSubscriptionBooking": "Sei sicuro di voler eliminare questa prenotazione abbonamento?",
+    "packageReservationDeleted": "Prenotazione pacchetto eliminata con successo",
+    "subscriptionBookingDeleted": "Prenotazione abbonamento eliminata con successo",
+    "errorDeletingBooking": "Errore durante l'eliminazione della prenotazione. Riprova."
   },
   "calendar": {
     "sunday": "Dom",
@@ -1764,6 +1775,7 @@
     "discountValue": "Valore Sconto",
     "percentage": "Percentuale",
     "fixedAmount": "Importo Fisso",
+    "fixed_amount": "Importo Fisso",
     "validity": "Validità",
     "validFrom": "Valido Da",
     "validUntil": "Valido Fino A",
@@ -1951,7 +1963,7 @@
   },
   "logs": {
     "title": "Registro Attività",
-    "description": "Visualizza e monitora tutte le attività del sistema e le azioni degli utenti",
+    "description": "Attività",
     "accessDenied": "Accesso Negato",
     "accessDeniedMessage": "Non hai i permessi per visualizzare il registro attività",
     "selectPartner": "Seleziona Partner",
@@ -1986,6 +1998,15 @@
     "ipAddress": "Indirizzo IP",
     "entityId": "ID Entità",
     "unknownUser": "Utente Sconosciuto",
+    "rowsPerPage": "Righe per pagina",
+    "showing": "Mostrando",
+    "logs": "registrazioni",
+    "noCategories": "Nessuna categoria disponibile",
+    "noActions": "Nessuna azione disponibile",
+    "noActivities": "Nessuna attività registrata",
+    "loadMore": "Carica Altri",
+    "loading": "Caricamento attività...",
+    "error": "Errore nel caricamento delle attività",
     "categories": {
       "authentication": "Autenticazione",
       "contract": "Contratto",
@@ -1995,7 +2016,13 @@
       "location": "Sede",
       "resource": "Risorsa",
       "payment": "Pagamento",
-      "system": "Sistema"
+      "system": "Sistema",
+      "email": "Email",
+      "space": "Spazio",
+      "user": "Utente",
+      "package": "Pacchetto",
+      "notification": "Notifiche",
+      "auth": "Autenticazione"
     },
     "actions": {
       "create": "Crea",
@@ -2021,12 +2048,176 @@
       "activate": "Attiva",
       "activated": "Attivato",
       "deactivate": "Disattiva",
-      "deactivated": "Disattivato"
+      "deactivated": "Disattivato",
+      "sent": "Inviato",
+      "renewed": "Rinnovato",
+      "archived": "Archiviato",
+      "restored": "Ripristinato",
+      "suspended": "Sospeso",
+      "completed": "Completato",
+      "failed": "Fallito",
+      "received": "Ricevuto",
+      "uploaded": "Caricato",
+      "downloaded": "Scaricato",
+      "image_deleted": "Immagine Eliminata",
+      "images_uploaded": "Immagini Caricate",
+      "resources_added": "Risorse Aggiunte",
+      "resources_updated": "Risorse Aggiornate",
+      "resources_deleted": "Risorse Eliminate",
+      "status_changed": "Stato Modificato",
+      "assigned": "Assegnato",
+      "unassigned": "Disassegnato"
+    },
+    "entityTypes": {
+      "location": "Sede",
+      "resource": "Risorsa",
+      "image": "Immagine",
+      "customer": "Cliente",
+      "contract": "Contratto",
+      "booking": "Prenotazione",
+      "package": "Pacchetto",
+      "payment": "Pagamento",
+      "service": "Servizio",
+      "user": "Utente"
+    },
+    "details": {
+      "hideDetails": "Nascondi Dettagli",
+      "changes": "Modifiche",
+      "from": "Da",
+      "to": "A",
+      "timestamp": "Data e Ora"
     }
   },
   "resources": {
     "scrivania": "Scrivanie",
     "sala_riunioni": "Sale Riunioni"
+  },
+  "notifications": {
+    "title": "Notifiche",
+    "subtitle": "Gestisci e visualizza le tue notifiche",
+    "myNotifications": "Le Mie Notifiche",
+    "createNotification": "Crea Notifica",
+    "sentNotifications": "Notifiche Inviate",
+    "templates": "Modelli",
+    "partnerNotifications": "Notifiche Partner",
+    
+    "all": "Tutte",
+    "unread": "Non Lette",
+    "allTypes": "Tutti i Tipi",
+    "searchPlaceholder": "Cerca notifiche...",
+    "noNotifications": "Nessuna notifica trovata",
+    "errorLoading": "Errore nel caricamento delle notifiche",
+    
+    "types": {
+      "promotion": "Promozione",
+      "announcement": "Annuncio",
+      "releaseNote": "Aggiornamento",
+      "release_note": "Aggiornamento",
+      "alert": "Avviso",
+      "newLocation": "Nuova Sede",
+      "new_location": "Nuova Sede"
+    },
+    
+    "createNewNotification": "Crea Nuova Notifica",
+    "editNotification": "Modifica Notifica",
+    "createDescription": "Crea e invia notifiche ai tuoi partner o clienti",
+    "startFromTemplate": "Inizia da un Modello",
+    "blankNotification": "Notifica Vuota",
+    "titlePlaceholder": "Inserisci il titolo della notifica",
+    "titleRequired": "Il titolo è obbligatorio",
+    "type": "Tipo",
+    "message": "Messaggio",
+    "messageRequired": "Il messaggio è obbligatorio",
+    "validFrom": "Valida Da",
+    "validUntil": "Valida Fino",
+    "dateRangeRequired": "L'intervallo di date è obbligatorio",
+    "invalidDateRange": "La data di fine deve essere successiva alla data di inizio",
+    "selectRecipients": "Seleziona Destinatari",
+    "recipientsRequired": "Seleziona almeno un destinatario",
+    "recipientsSelected": "destinatari selezionati",
+    "preview": "Anteprima",
+    "previewMode": "Questa è un'anteprima",
+    "saveAsDraft": "Salva come Bozza",
+    "publish": "Pubblica",
+    "gotIt": "Ho capito",
+    
+    "bold": "Grassetto",
+    "italic": "Corsivo",
+    "heading": "Intestazione",
+    "insertLink": "Inserisci Link",
+    "enterLinkUrl": "Inserisci URL:",
+    "enterLinkText": "Inserisci testo del link:",
+    
+    "searchRecipients": "Cerca destinatari...",
+    "allCustomers": "Tutti i Clienti",
+    "activeContracts": "Contratti Attivi",
+    "subscriptions": "Abbonamenti",
+    "packages": "Pacchetti",
+    "allStructures": "Tutte le Sedi",
+    "selectAllFiltered": "Seleziona Tutti i Filtrati",
+    "deselectAll": "Deseleziona Tutti",
+    "noRecipientsFound": "Nessun destinatario trovato",
+    "errorLoadingRecipients": "Errore nel caricamento dei destinatari",
+    
+    "draft": "Bozza",
+    "published": "Pubblicata",
+    "active": "Attiva",
+    "expired": "Scaduta",
+    "scheduled": "Programmata",
+    "noSentNotifications": "Nessuna notifica inviata",
+    "status": "Stato",
+    "dates": "Date",
+    "recipients": "Destinatari",
+    "actions": "Azioni",
+    "partner": "Partner",
+    "confirmDelete": "Elimina Notifica",
+    "confirmDeleteMessage": "Sei sicuro di voler eliminare questa notifica? Questa azione non può essere annullata.",
+    "notificationDeleted": "Notifica eliminata con successo",
+    "errorDeleting": "Errore nell'eliminazione della notifica",
+    "notificationPublished": "Notifica pubblicata con successo",
+    "errorPublishing": "Errore nella pubblicazione della notifica",
+    "notificationSavedAsDraft": "Notifica salvata come bozza",
+    "errorSaving": "Errore nel salvataggio della notifica",
+    "errorAcknowledging": "Errore nella conferma della notifica",
+    
+    "createTemplate": "Crea Modello",
+    "editTemplate": "Modifica Modello",
+    "noTemplates": "Nessun modello trovato",
+    "systemTemplate": "Sistema",
+    "myTemplate": "Mio Modello",
+    "confirmDeleteTemplate": "Elimina Modello",
+    "confirmDeleteTemplateMessage": "Sei sicuro di voler eliminare questo modello?",
+    "templateDeleted": "Modello eliminato con successo",
+    "errorDeletingTemplate": "Errore nell'eliminazione del modello",
+    "errorLoadingTemplates": "Errore nel caricamento dei modelli",
+    "templateName": "Nome Modello",
+    "templateNamePlaceholder": "es. Promozione Black Friday",
+    "templateNameRequired": "Il nome del modello è obbligatorio",
+    "templateDescription": "Descrizione",
+    "templateDescriptionPlaceholder": "Descrivi a cosa serve questo modello",
+    "titleTemplate": "Modello Titolo",
+    "titleTemplatePlaceholder": "es. {{partner_name}} - Offerta Speciale!",
+    "messageTemplate": "Modello Messaggio",
+    "templateContentRequired": "Il contenuto del modello è obbligatorio",
+    "availableVariables": "Variabili Disponibili",
+    "templateSaved": "Modello salvato con successo",
+    "errorSavingTemplate": "Errore nel salvataggio del modello",
+    
+    "variables": {
+      "partnerName": "Nome partner",
+      "customerName": "Nome cliente",
+      "currentDate": "Data corrente",
+      "offerPercentage": "Percentuale offerta",
+      "locationName": "Nome sede"
+    },
+    
+    "partnerNotificationsDescription": "Visualizza le notifiche create dai partner",
+    "noPartnerNotifications": "Nessuna notifica partner trovata",
+    "allPartners": "Tutti i Partner",
+    "recipientType": "Tipo Destinatario",
+    "allRecipientTypes": "Tutti i Destinatari",
+    "partnersOnly": "Solo Partner",
+    "customersOnly": "Solo Clienti"
   },
   "app": {
     "appName": " ",
