--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,8 @@
     "support": "Support",
     "customersDiscountCodes": "Discount Codes",
     "logview": "Logs",
-    "superadminemail": "Partner Email"
+    "superadminemail": "Partner Email",
+    "notifications": "Notifications"
   },
   "customers": {
     "title": "Customers",
@@ -546,7 +547,8 @@
     "confirmCancelTitle": "Cancel Invitation",
     "confirmCancelMessage": "Are you sure you want to cancel this invitation? This action cannot be undone.",
     "confirmDeleteTitle": "Delete Invitations",
-    "confirmDeleteMessage": "Are you sure you want to delete {{count}} invitation(s)? This action cannot be undone."
+    "confirmDeleteMessage": "Are you sure you want to delete {{count}} invitation(s)? This action cannot be undone.",
+    "selectStatus": "Select the status"
   },
   "common": {
     "loading": "Loading...",
@@ -579,7 +581,8 @@
     "of": "of",
     "confirm": "Confirm",
     "accessDenied": "Access denied",
-    "select": "Select"
+    "select": "Select",
+    "page": "Per page"
   },
   "messages": {
     "signedInSuccessfully": "Signed in successfully",
@@ -1164,7 +1167,15 @@
     "startDate": "Start Date",
     "endDate": "End Date",
     "pricing": "Pricing",
-    "serviceCost": "Service Cost"
+    "serviceCost": "Service Cost",
+    "deleteBooking": "Delete Booking",
+    "deleteBookingTitle": "Delete Booking",
+    "confirmDelete": "Delete",
+    "confirmDeletePackageReservation": "Are you sure you want to delete this package reservation? This will restore one entry to your package.",
+    "confirmDeleteSubscriptionBooking": "Are you sure you want to delete this subscription booking?",
+    "packageReservationDeleted": "Package reservation deleted successfully",
+    "subscriptionBookingDeleted": "Subscription booking deleted successfully",
+    "errorDeletingBooking": "Error deleting booking. Please try again."
   },
   "calendar": {
     "sunday": "Sun",
@@ -1946,18 +1957,18 @@
     "accessDeniedMessage": "Only partners can manage customer discount codes."
   },
   "logs": {
-    "title": "Activity Logs",
-    "description": "Description",
+    "title": "Activity Log",
+    "description": "Activities",
     "accessDenied": "Access Denied",
-    "accessDeniedMessage": "You don't have permission to view activity logs",
+    "accessDeniedMessage": "You don't have permission to view the activity log",
     "selectPartner": "Select Partner",
     "selectPartnerPlaceholder": "Choose a partner to view logs",
     "errorLoadingPartners": "Error loading partners",
-    "errorLoadingLogs": "Error loading activity logs",
+    "errorLoadingLogs": "Error loading activity log",
     "filters": "Filters",
     "clearFilters": "Clear Filters",
-    "dateFrom": "From Date",
-    "dateTo": "To Date",
+    "dateFrom": "Date From",
+    "dateTo": "Date To",
     "category": "Category",
     "actionType": "Action Type",
     "allCategories": "All Categories",
@@ -1982,6 +1993,15 @@
     "ipAddress": "IP Address",
     "entityId": "Entity ID",
     "unknownUser": "Unknown User",
+    "rowsPerPage": "Rows per page",
+    "showing": "Showing",
+    "logs": "logs",
+    "noCategories": "No categories available",
+    "noActions": "No actions available",
+    "noActivities": "No activities recorded",
+    "loadMore": "Load More",
+    "loading": "Loading activities...",
+    "error": "Error loading activities",
     "categories": {
       "authentication": "Authentication",
       "contract": "Contract",
@@ -1991,7 +2011,13 @@
       "location": "Location",
       "resource": "Resource",
       "payment": "Payment",
-      "system": "System"
+      "system": "System",
+      "email": "Email",
+      "space": "Space",
+      "user": "User",
+      "package": "Package",
+      "notification": "Notifications",
+      "auth": "Authentication"
     },
     "actions": {
       "create": "Create",
@@ -2017,12 +2043,176 @@
       "activate": "Activate",
       "activated": "Activated",
       "deactivate": "Deactivate",
-      "deactivated": "Deactivated"
+      "deactivated": "Deactivated",
+      "sent": "Sent",
+      "renewed": "Renewed",
+      "archived": "Archived",
+      "restored": "Restored",
+      "suspended": "Suspended",
+      "completed": "Completed",
+      "failed": "Failed",
+      "received": "Received",
+      "uploaded": "Uploaded",
+      "downloaded": "Downloaded",
+      "image_deleted": "Image Deleted",
+      "images_uploaded": "Images Uploaded",
+      "resources_added": "Resources Added",
+      "resources_updated": "Resources Updated",
+      "resources_deleted": "Resources Deleted",
+      "status_changed": "Status Changed",
+      "assigned": "Assigned",
+      "unassigned": "Unassigned"
+    },
+    "entityTypes": {
+      "location": "Location",
+      "resource": "Resource",
+      "image": "Image",
+      "customer": "Customer",
+      "contract": "Contract",
+      "booking": "Booking",
+      "package": "Package",
+      "payment": "Payment",
+      "service": "Service",
+      "user": "User"
+    },
+    "details": {
+      "hideDetails": "Hide Details",
+      "changes": "Changes",
+      "from": "From",
+      "to": "To",
+      "timestamp": "Timestamp"
     }
   },
   "resources": {
     "scrivania": "Desks",
     "sala_riunioni": "Meeting Rooms"
+  },
+  "notifications": {
+    "title": "Notifications",
+    "subtitle": "Manage and view your notifications",
+    "myNotifications": "My Notifications",
+    "createNotification": "Create Notification",
+    "sentNotifications": "Sent Notifications",
+    "templates": "Templates",
+    "partnerNotifications": "Partner Notifications",
+    
+    "all": "All",
+    "unread": "Unread",
+    "allTypes": "All Types",
+    "searchPlaceholder": "Search notifications...",
+    "noNotifications": "No notifications found",
+    "errorLoading": "Error loading notifications",
+    
+    "types": {
+      "promotion": "Promotion",
+      "announcement": "Announcement",
+      "releaseNote": "Release Note",
+      "release_note": "Release Note",
+      "alert": "Alert",
+      "newLocation": "New Location",
+      "new_location": "New Location"
+    },
+    
+    "createNewNotification": "Create New Notification",
+    "editNotification": "Edit Notification",
+    "createDescription": "Create and send notifications to your partners or customers",
+    "startFromTemplate": "Start from Template",
+    "blankNotification": "Blank Notification",
+    "titlePlaceholder": "Enter notification title",
+    "titleRequired": "Title is required",
+    "type": "Type",
+    "message": "Message",
+    "messageRequired": "Message is required",
+    "validFrom": "Valid From",
+    "validUntil": "Valid Until",
+    "dateRangeRequired": "Date range is required",
+    "invalidDateRange": "End date must be after start date",
+    "selectRecipients": "Select Recipients",
+    "recipientsRequired": "Please select at least one recipient",
+    "recipientsSelected": "recipients selected",
+    "preview": "Preview",
+    "previewMode": "This is a preview",
+    "saveAsDraft": "Save as Draft",
+    "publish": "Publish",
+    "gotIt": "Got it",
+    
+    "bold": "Bold",
+    "italic": "Italic",
+    "heading": "Heading",
+    "insertLink": "Insert Link",
+    "enterLinkUrl": "Enter URL:",
+    "enterLinkText": "Enter link text:",
+    
+    "searchRecipients": "Search recipients...",
+    "allCustomers": "All Customers",
+    "activeContracts": "Active Contracts",
+    "subscriptions": "Subscriptions",
+    "packages": "Packages",
+    "allStructures": "All Structures",
+    "selectAllFiltered": "Select All Filtered",
+    "deselectAll": "Deselect All",
+    "noRecipientsFound": "No recipients found",
+    "errorLoadingRecipients": "Error loading recipients",
+    
+    "draft": "Draft",
+    "published": "Published",
+    "active": "Active",
+    "expired": "Expired",
+    "scheduled": "Scheduled",
+    "noSentNotifications": "No sent notifications",
+    "status": "Status",
+    "dates": "Dates",
+    "recipients": "Recipients",
+    "actions": "Actions",
+    "partner": "Partner",
+    "confirmDelete": "Delete Notification",
+    "confirmDeleteMessage": "Are you sure you want to delete this notification? This action cannot be undone.",
+    "notificationDeleted": "Notification deleted successfully",
+    "errorDeleting": "Error deleting notification",
+    "notificationPublished": "Notification published successfully",
+    "errorPublishing": "Error publishing notification",
+    "notificationSavedAsDraft": "Notification saved as draft",
+    "errorSaving": "Error saving notification",
+    "errorAcknowledging": "Error acknowledging notification",
+    
+    "createTemplate": "Create Template",
+    "editTemplate": "Edit Template",
+    "noTemplates": "No templates found",
+    "systemTemplate": "System",
+    "myTemplate": "My Template",
+    "confirmDeleteTemplate": "Delete Template",
+    "confirmDeleteTemplateMessage": "Are you sure you want to delete this template?",
+    "templateDeleted": "Template deleted successfully",
+    "errorDeletingTemplate": "Error deleting template",
+    "errorLoadingTemplates": "Error loading templates",
+    "templateName": "Template Name",
+    "templateNamePlaceholder": "e.g., Black Friday Promotion",
+    "templateNameRequired": "Template name is required",
+    "templateDescription": "Description",
+    "templateDescriptionPlaceholder": "Describe what this template is for",
+    "titleTemplate": "Title Template",
+    "titleTemplatePlaceholder": "e.g., {{partner_name}} - Special Offer!",
+    "messageTemplate": "Message Template",
+    "templateContentRequired": "Template content is required",
+    "availableVariables": "Available Variables",
+    "templateSaved": "Template saved successfully",
+    "errorSavingTemplate": "Error saving template",
+    
+    "variables": {
+      "partnerName": "Partner name",
+      "customerName": "Customer name",
+      "currentDate": "Current date",
+      "offerPercentage": "Offer percentage",
+      "locationName": "Location name"
+    },
+    
+    "partnerNotificationsDescription": "View notifications created by partners",
+    "noPartnerNotifications": "No partner notifications found",
+    "allPartners": "All Partners",
+    "recipientType": "Recipient Type",
+    "allRecipientTypes": "All Recipients",
+    "partnersOnly": "Partners Only",
+    "customersOnly": "Customers Only"
   },
   "app": {
     "appName": " ",
