--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -25,7 +25,11 @@
     "customersDiscountCodes": "Codici Sconto",
     "logview": "Logs",
     "superadminemail": "Partner Email",
-    "notifications": "Gestione Notifiche"
+    "notifications": "Gestione Notifiche",
+    "partner-billing": "Gestione Fatturazione",
+    "partners-billing": "All Partners Billing",
+    "billing-history": "Pagamenti e fatture",
+    "billing-statistics": "Statistiche Fatture"
   },
   "customers": {
     "title": "Clienti",
@@ -448,7 +452,11 @@
     "totalActiveValue": "Valore Totale Contratti Attivi",
     "monthOverMonthGrowth": "Crescita Mese su Mese",
     "packageUtilization": "Utilizzo Pacchetti",
-    "customerUsagePatterns": "Pattern di utilizzo clienti e consumo ingressi"
+    "customerUsagePatterns": "Pattern di utilizzo clienti e consumo ingressi",
+    "partnersUsersMonitoring": "Monitoraggio Utenti Partner",
+    "activeUsersVsPlanLimits": "Utenti Attivi vs Limiti Piano - Top Partner",
+    "noPartnersData": "Nessun dato di fatturazione disponibile",
+    "partnersOverLimit": "partner oltre il limite"
   },
   "partners": {
     "title": "Partner",
@@ -582,7 +590,11 @@
     "confirm": "Conferma",
     "accessDenied": "Accesso negato",
     "select": "Seleziona",
-    "page": "Per pagina"
+    "page": "Per pagina",
+    "noResultsFound": "Nessun risultato",
+    "showing": "Visualizzati",
+    "rowsPerPage": "Righe per pagina",
+    "refresh": "Aggiorna"
   },
   "messages": {
     "signedInSuccessfully": "Accesso effettuato con successo",
@@ -716,7 +728,9 @@
     "errorCheckingContracts": "Errore nel controllo dei contratti associati",
     "endDateRequired": "La data di fine è obbligatoria",
     "endDateMustBeAfterStartDate": "La data di fine deve essere successiva alla data di inizio",
-    "priceInvalid": "Il prezzo deve essere un numero valido maggiore di zero"
+    "priceInvalid": "Il prezzo deve essere un numero valido maggiore di zero",
+    "pdfGenerated": "PDF generato con successo",
+    "errorGeneratingPdf": "Errore nella generazione del PDF"
   },
   "services": {
     "title": "Servizi",
@@ -2219,6 +2233,86 @@
     "partnersOnly": "Solo Partner",
     "customersOnly": "Solo Clienti"
   },
+  "partnerBilling": {
+    "billingHistory": "Storico Fatturazione",
+    "billingHistorySubtitle": "Visualizza e gestisci le tue fatture",
+    "allPartnersBilling": "Fatturazione Tutti i Partner",
+    "allPartnersBillingSubtitle": "Gestisci la fatturazione di tutti i partner",
+    "totalInvoices": "Totale Fatture",
+    "pending": "In Attesa",
+    "paid": "Pagato",
+    "overdue": "Scaduto",
+    "failed": "Fallito",
+    "cancelled": "Annullato",
+    "totalAmount": "Importo Totale",
+    "status": "Stato",
+    "year": "Anno",
+    "partner": "Partner",
+    "invoiceNumber": "N. Fattura",
+    "period": "Periodo",
+    "plan": "Piano",
+    "amount": "Importo",
+    "activeUsers": "Utenti Attivi",
+    "dueDate": "Scadenza",
+    "lateFee": "Mora",
+    "overLimit": "Oltre Limite",
+    "daysOverdue": "giorni di ritardo",
+    "noInvoices": "Nessuna fattura trovata",
+    "downloadInvoice": "Scarica Fattura",
+    "searchInvoices": "Cerca fatture o partner...",
+    "errorMessage": "Messaggio di Errore",
+    "yes": "Sì",
+    "no": "No",
+    "invoice": "FATTURA",
+    "billingPeriod": "Periodo Fatturazione",
+    "issueDate": "Data Emissione",
+    "paymentDate": "Data Pagamento",
+    "transactionRef": "Rif. Transazione",
+    "serviceDetails": "Dettaglio Servizio",
+    "description": "Descrizione",
+    "subscriptionService": "Servizio Abbonamento",
+    "billingFrequency": "Frequenza Fatturazione",
+    "monthly": "Mensile",
+    "yearly": "Annuale",
+    "invoiceFooter": "Questo documento rappresenta una fattura valida per il servizio fornito.",
+    "paymentInstructions": "ISTRUZIONI PER IL PAGAMENTO",
+    "paymentInstructionsText": "Si prega di effettuare il pagamento entro la data di scadenza utilizzando i seguenti metodi: bonifico bancario, carta di credito o addebito diretto."
+  },
+  "billingStats": {
+    "title": "Dashboard Statistiche Fatturazione",
+    "subtitle": "Analisi e metriche del sistema di fatturazione",
+    "period": "Periodo",
+    "last3Months": "Ultimi 3 Mesi",
+    "last6Months": "Ultimi 6 Mesi",
+    "last12Months": "Ultimi 12 Mesi",
+    "last24Months": "Ultimi 24 Mesi",
+    "totalRevenue": "Fatturato Totale",
+    "monthlyRevenue": "Fatturato Mensile",
+    "yearlyRevenue": "Fatturato Annuale",
+    "activePartners": "Partner Attivi",
+    "allTime": "Tutto il periodo",
+    "revenueBreakdown": "Dettaglio Fatturato",
+    "paidInvoices": "Fatture Pagate",
+    "pendingInvoices": "Fatture In Attesa",
+    "overdueInvoices": "Fatture Scadute",
+    "revenueChart": "Andamento Fatturato",
+    "paid": "Pagato",
+    "pending": "In Attesa",
+    "topPartners": "Top Partner per Fatturato",
+    "invoices": "fatture",
+    "overLimitPartners": "Partner Oltre Limite",
+    "since": "dal",
+    "noOverLimit": "Nessun partner oltre il limite",
+    "recentActivity": "Attività Recente",
+    "partner": "Partner",
+    "invoice": "Fattura",
+    "amount": "Importo",
+    "status": "Stato",
+    "date": "Data",
+    "avgRevenuePerPartner": "Media per Partner",
+    "totalInvoices": "Totale Fatture",
+    "overLimitCount": "Partner Oltre Limite"
+  },  
   "app": {
     "appName": " ",
     "appShortName": "PowerCowo",
